--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-MYSQL_ROOT_PASSWORD=root
-TS3SERVER_DB_PASSWORD=default
+TS3SERVER_DB_PLUGIN: ts3db_mariadb
+TS3SERVER_DB_SQLCREATEPATH: create_mariadb
+TS3SERVER_DB_HOST: db
+TS3SERVER_DB_USER: root
+TS3SERVER_DB_PASSWORD: hello
+TS3SERVER_DB_NAME: teamspeak
+TS3SERVER_DB_WAITUNTILREADY: 30
+TS3SERVER_LICENSE: accept
+MYSQL_ROOT_PASSWORD: hello
+MYSQL_DATABASE: teamspeak
