--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,13 +19,22 @@ services:
       TS3SERVER_LICENSE: accept
     volumes:
       - ./ts_volume:/var/ts3server/
+    environment:
+      TS3SERVER_DB_PLUGIN: ts3db_mariadb
+      TS3SERVER_DB_SQLCREATEPATH: create_mariadb
+      TS3SERVER_DB_HOST: db
+      TS3SERVER_DB_USER: root
+      TS3SERVER_DB_PASSWORD: hello
+      TS3SERVER_DB_NAME: teamspeak
+      TS3SERVER_DB_WAITUNTILREADY: 30
+      TS3SERVER_LICENSE: accept
     depends_on:
       - db
   db:
     image: mariadb
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: hello
       MYSQL_DATABASE: teamspeak
     volumes:
       - ./db_volume:/var/lib/mysql
